<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboute_activity">


    <TextView
        android:id="@+id/namasy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:text="@string/aji_pirjian"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poto" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/nim"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namasy" />

    <ImageView
        android:id="@+id/poto"
        android:layout_width="200dp"
        android:layout_height="186dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aji" />

    <TextView
        android:id="@+id/kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/kelas"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nim"
        app:layout_constraintTop_toTopOf="@+id/nim" />

    <TextView
        android:id="@+id/ket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/no_wa"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kelas" />

    <TextView
        android:id="@+id/v_nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/_10121095"
        app:layout_constraintStart_toEndOf="@+id/nim"
        app:layout_constraintTop_toBottomOf="@+id/namasy" />

    <TextView
        android:id="@+id/v_kls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/if_3"
        app:layout_constraintStart_toEndOf="@+id/kelas"
        app:layout_constraintTop_toBottomOf="@+id/v_nim" />

    <TextView
        android:id="@+id/v_ket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/_089663661772"
        app:layout_constraintStart_toEndOf="@+id/ket"
        app:layout_constraintTop_toBottomOf="@+id/v_kls" />

</androidx.constraintlayout.widget.ConstraintLayout>