<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/tvposter"
        android:layout_width="135dp"
        android:layout_height="192dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvjudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/judul"
        app:layout_constraintStart_toEndOf="@+id/tvposter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvgenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvjudul"
        app:layout_constraintTop_toBottomOf="@+id/tvjudul" />

    <TextView
        android:id="@+id/tvdetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:maxLines="6"
        android:text="@string/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvgenre"
        app:layout_constraintTop_toBottomOf="@+id/tvgenre" />
</androidx.constraintlayout.widget.ConstraintLayout>